first working draft

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,2 +1,3 @@
 Kyle Birkeland <kylebirkeland@gmail.com>
 Dan Lenski <dlenski@gmail.com> - primary author of the forked gp-saml-gui
+Sven Putze <github@hardcodes.de> - primary author of the forked openconnect-pulse-gui
